auto-test/tests/chapter_18/invalid_struct_tags/extra_credit/sizeof_undeclared_union.c
int main(void) {
    
    
    
    
    return sizeof(union c);
}

union c {
    int x;
};